syntax = "proto3";
package ibft.v1alpha;

option go_package = "github.com/bloxapp/ssv/ibft/types";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

message Params{
  int64 round_change_duration = 1 [(gogoproto.stdduration) = true, (gogoproto.nullable) = false];
}